--- a/style.css
+++ b/style.css
@@ -46,3 +46,33 @@ h1 {
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight: bold;
 }
+
+.bus-stops-container {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.bus-stop-item {
+    display: flex;
+    align-items: flex-start;
+}
+
+.distance-info {
+    flex: 0 0 150px;  /* 固定宽度 */
+    width: 150px;
+}
+
+.stop-info {
+    flex: 1;  /* 占据剩余空间 */
+}
+
+.stop-name:hover{
+    color: #007bff;
+    cursor: pointer;
+}
+
+.stop-name{
+    color:blue;
+    text-decoration: underline;
+}
