--- a/style.css
+++ b/style.css
@@ -42,9 +42,14 @@ h1 {
 }
 
 .query{
+    font-size: 1.2em;
     margin-left: 2%;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    /* font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
     font-weight: bold;
+}
+
+#info-container{
+    margin-top: 10px;
 }
 
 .bus-stops-container {
@@ -56,6 +61,8 @@ h1 {
 .bus-stop-item {
     display: flex;
     align-items: flex-start;
+    width: fit-content;
+    margin-left: 3%;
 }
 
 .distance-info {
@@ -75,4 +82,104 @@ h1 {
 .stop-name{
     color:blue;
     text-decoration: underline;
+}
+
+.highlighted {
+    background-color: yellow;
+}
+
+.stop-detail-container {
+    padding-top: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px; 
+}
+
+.stop-detail-info {
+    display: flex;
+    align-items: center;
+    /* gap: 15px; */
+    margin-bottom: 5px;
+}
+
+.stop-detail-route {
+    flex: 0 0 120px;
+    font-weight: bold;
+    font-size: 1.1em;
+    min-width: 50px;
+    text-align: center;
+}
+
+/* .stop-detail-dest {
+    color: #666;
+} */
+
+.eta-container {
+    margin-left: 50px;
+    color: #333;
+}
+
+.eta-label{
+    font-weight: bold;
+    margin-right: 10px;
+}
+
+.eta-time {
+    color:blue;
+    font-weight: bold;
+    margin: 0 8px;
+    padding: 2px 8px;
+    border-radius: 4px;
+    display: inline-block;
+}
+
+.cover-stop-detail{
+   display: flex; 
+   /* flex-wrap: wrap; */
+}
+
+.stop-detail{
+    flex-basis: 50%;
+}
+
+.map-size{
+    min-width: 400px;   
+    height: 400px; 
+    width: 50%;
+}
+
+.stop-detail p{
+    padding-left: 40px;
+}
+
+#info-container p{
+   margin-left: 3%;
+}
+
+/* Responsive design*/
+@media screen and (max-width: 799px) {
+    
+    h1 {
+        font-size: 24px;
+    }
+    
+    .query {
+        font-size: 1em;
+    }
+
+    .stop-detail{
+        flex: 0 0 100%;
+    }
+
+    .map-size{
+        width: 50%;
+        min-width: 400px;   
+        height: 400px; 
+        justify-self: center;
+    }
+
+    .cover-stop-detail{
+        display: flex; 
+        flex-direction: column;
+     }
 }
